se agregan animaciones con archivos svg

--- a/index.html
+++ b/index.html
@@ -36,17 +36,9 @@
         </div>   
 <!--section-->
         <div class="sidebar">
-            <div class="aside">
-                <div class="filtro">
-                  <p>Ordenar Por:</p>
-                  <select class="form-select" aria-label="Default select example">
-                    <option selected>Precio</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
-                </div>
-            </div>    
+            <div>
+                <img class="hada2" src="./assets/img/10814womanfairylightskintone_111996.svg" alt="hada"/>
+            </div>
         </div>
 <!--fotos-->
         <div class="main">
