--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                     <div class="logo">
                         <div class="menu_logo_tienda"></div>
                         <img class="hada5" src="./assets/img/10814womanfairylightskintone_111996.svg" alt="hada"/>
-                        <h6>Mis Regalones</h6>
+                        <h6 id="Regalones">Mis Regalones</h6>
                     </div>
 <!--hamburguesa-->
                     <div class="menu_items_a">
                         <ul class="menu_item">
-                            <li><a href="https://anny23sa.github.io/CurriculumVitae/" class="active">Inicio</a></li>
-                            <li><a href="https://www.partyfiesta.com/disfraces/mascotas/" class="cat">Catálogo</a></li>
-                            <li><a href="https://articulo.mercadolibre.cl/MLC-940686061-poleron-ropa-para-perros-y-gatos-mascota-disfraz-de-rana-_JM" class="of">Ofertas</a></li>
+                            <li><a href="#Regalones" class="active">Inicio</a></li>
+                            <li><a href="#card3" class="cat">Catálogo</a></li>
+                            <li><a href="#fin" class="of">Ofertas</a></li>
                         </ul>
                     </div>
                     <div class="menu_icono_hamburguesa">
@@ -111,7 +111,7 @@
 <!--footer-->
         <div class="footer">
             <div class="footer-text-center">
-                <div class="icono_footer">
+                <div id="fin" class="icono_footer">
                     <a href="https://www.facebook.com/profile.php?id=100093846160272">
                         <i class="fa-brands fa-facebook fa-sm"></i>
                     </a>
