direcionar a partes de la pagina

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <!--hamburguesa-->
                     <div class="menu_items_a">
                         <ul class="menu_item">
-                            <li><a href="#Regalones" class="active">Inicio</a></li>
-                            <li><a href="#card3" class="cat">Catálogo</a></li>
-                            <li><a href="#fin" class="of">Ofertas</a></li>
+                            <li><a href="#regalones" class="active">Inicio</a></li>
+                            <li><a href="#card3">Catálogo</a></li>
+                            <li><a href="#fin">Ofertas</a></li>
                         </ul>
                     </div>
                     <div class="menu_icono_hamburguesa">
