--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="header">
+        <div id="inicio" class="header">
             <div class="grid-container-header">
                 <div class="grid-container-header-menu">
                     <div class="logo">
@@ -22,7 +22,7 @@
 <!--hamburguesa-->
                     <div class="menu_items_a">
                         <ul class="menu_item">
-                            <li><a href="#regalones" class="active">Inicio</a></li>
+                            <li><a href="#inicio" class="active">Inicio</a></li>
                             <li><a href="#card3">Catálogo</a></li>
                             <li><a href="#fin">Ofertas</a></li>
                         </ul>
