--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="menu_items_a">
                         <ul class="menu_item">
                             <li><a href="#inicio" class="active">Inicio</a></li>
-                            <li><a href="#card3">Catálogo</a></li>
+                            <li><a href="#side">Catálogo</a></li>
                             <li><a href="#fin">Ofertas</a></li>
                         </ul>
                     </div>
@@ -36,7 +36,7 @@
             </div>
         </div>   
 <!--section-->
-        <div class="sidebar">
+        <div id="side" class="sidebar">
             <div>
                 <img class="hada2" src="./assets/img/10814womanfairylightskintone_111996.svg" alt="hada"/>
             </div>
